          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 2.1
!IMPORTANT! Read <a href="http://wiki.flightgear.org/FlightGearMap">http://wiki.flightgear.org/FlightGearMap</a> for installation instructions.
  % Version 2.1b
  ! <b>The new panel for the B1900D uses a different andatlas.xml</b>
  _ 2013-11-20
    * New panel: B1900D
    * HSI: the glideslope mark is not shown if GS not in range
    * New option to switch full screen off
    * New option to center (or not) surfaces on screen
    * Shows the IP address in the main activity
    * Removes last references to Google Maps
    * Bug fixing: the comm panel couldn't be selected
  % Version 2.1
  _ 2013-08-31
    * The heading bug in the C337 panel is movable
    * New panel: single instrument panel
    * Old panel: recovering basic panel, after users' requests
    * Bug fixing: The oil pressure in the single engine panel is now correct
    * Bug fixing: the manifold pressure in the single engine panel is now correct
    * Bug fixing: screens with a 4/3 aspect ratio are now correct.
    * Use alternative starter on some aircrafts
$ 2.0
  % Version 2.0
  _ 2013-05-18
    ! <b>YOU MUST UPDATE ANDATLAS.XML TO THE LAST VERSION</b>
    * Show changelog dialog (this message!)
    * Ads to have some revenue (sorry!)
    * New instruments: altitude radar, HSI, RMI, magnets and starter.
    * New panel: Cessna 337 Skymaster
    * New panel: Comms panel
    * Single engine panel: you can configure some of the instruments
    * Speed improvements on all surfaces
$ 1.5
  % Version 1.5
  _ 2012-05-06
    ! <b>YOU MUST UPDATE ANDATLAS.XML TO THE LAST VERSION</b>
    * Calibrate instruments and controls using the touch screen: NAV1, NAV2, altimeter and lights.
$ 1.4
  % Version 1.4
  _ 2012-04-29
  * New panel: Cessna 172
  * Speed and memory improvements: chooses images according to the device's capabilities.
$ END_OF_CHANGE_LOG
  </body>
</html>